feat: update quiz answer record
